# libExif-pt

./: .gitignore  CMakeLists.txt  Makefile  README.md  exif_parser-legacy.c  run.sh  test_runner
include/: exif_parser.h  format_reader.h
src/: exif_parser.c  format_reader.c
tests/: test_exif_parser  test_exif_parser.c  test_format_reader.c  test_main.c
